Changed some margins, fixed the width of content for forms on mobile create and edit post. Also changed the preview image size to be a bit smaller

--- a/css/edit-create.css
+++ b/css/edit-create.css
@@ -53,7 +53,7 @@ button {
     background-color: var(--secondary);
     color: var(--primary);
     height: 2rem;
-    margin-bottom: 1rem;
+    margin: 1rem 0 1rem 0;
 }
 
 #imagePreview {
